--- a/_posts/2022-01-14-tag9.md
+++ b/_posts/2022-01-14-tag9.md
@@ -12,3 +12,4 @@ Ebenfalls interessiert ist die Infografik über die Struktur des genutzten Syste
 Für Onlineschnittstellen, wie bspw. OAI-PMH, werde die Daten aus OpenRefine im XML-Format ausgegeben und via XSLT in das EAD-Format (Encoded Archival Description) konvertiert. Diese Files wiederum können dann via der Schnittstelle abgerufen werden. 
 ![image](https://user-images.githubusercontent.com/91458246/149483015-8c661fb1-9b13-4836-b8f0-8cb76314a63b.png)
 
+Wie erwartet war die Evaluation der Lehrveranstaltung etwas polarisierend. Aufgrund der verschiedenen Schwerpunkte der Studierenden kam einiges an verschiedenen Antworten zusammen. Auch für mich, mit Schwerpunkt Web- und Usability-Engineering, war der Kurs eher schwierig zu absolvieren. Aufgrund fehlender Kenntnisse im Bibliotheks- und Archivwesen war einiges an Vorwissen und Kenntnissen zu den Themen und verschiedenen Systemen nicht vorhanden. Persönlich hätte ich mir etwas mehr vom "Informatik"-Teil der Veranstaltung erhofft und mehr praktische Übungen und Einblick in die technischen Hintergründe der Systeme. Nichtsdestotrotz war der Kurs spannend und der Leistungsnachweis in Form dieses Tagebuchs ist auch für Studierende anderer Fachrichtungen gut machbar. 
